--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
       <artifactId>walkingkooka-storage</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>walkingkooka</groupId>
+      <artifactId>walkingkooka-tree-json-convert</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
